--- a/app/src/main/res/layout/info_windos_market.xml
+++ b/app/src/main/res/layout/info_windos_market.xml
@@ -2,15 +2,15 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/info_window"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="150dp"
+    android:layout_height="175dp"
+
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/Info_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
         android:textStyle="bold"
         android:textColor="#000"
         android:text="sin contenido"/>
@@ -18,6 +18,7 @@
     <ImageView
         android:id="@+id/InfoImage"
         android:layout_width="150dp"
-        android:layout_height="175dp"/>
+        android:layout_height="175dp"
+        android:layout_gravity="center"/>
 
 </LinearLayout>
