--- a/app/src/main/res/layout/menu_act.xml
+++ b/app/src/main/res/layout/menu_act.xml
@@ -4,6 +4,81 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/menu_act"
+    android:background="#17A589"
     android:orientation="vertical">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:layout_margin="10dp"
+        android:gravity="center"
+        android:background="#ECE1E1"
+        android:textColor="#000"
+        android:textStyle="bold"
+        android:textSize="17dp"
+        android:text="Guia de colores"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_margin="10dp"
+        android:gravity="center"
+        android:background="#007FFF"
+        android:textColor="#FFF"
+        android:textStyle="bold"
+        android:textSize="17dp"
+        android:text="Chapultepec"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_margin="10dp"
+        android:gravity="center"
+        android:background="#5fde4e"
+        android:textColor="#FFF"
+        android:textStyle="bold"
+        android:textSize="17dp"
+        android:text="NorteSur"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_margin="10dp"
+        android:gravity="center"
+        android:background="#E60026"
+        android:textColor="#FFF"
+        android:textStyle="bold"
+        android:textSize="17dp"
+        android:text="Bolivar"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_margin="10dp"
+        android:gravity="center"
+        android:background="#A349A4"
+        android:textColor="#FFF"
+        android:textStyle="bold"
+        android:textSize="17dp"
+        android:text="Petrolera"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_margin="10dp"
+        android:gravity="center"
+        android:background="#E3EC25"
+        android:textColor="#FFF"
+        android:textStyle="bold"
+        android:textSize="17dp"
+        android:text="Ruta 6"/>
+
+    <Button
+        android:id="@+id/guia_bt1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:onClick="onClick"
+        android:text="regresar"/>
 
 </LinearLayout>
