--- a/app/src/main/res/layout/registro_etiqueta.xml
+++ b/app/src/main/res/layout/registro_etiqueta.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fillViewport="true"
+    >
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/registro_etiqueta"
@@ -200,5 +205,5 @@
         android:onClick="onClick"
         android:id="@+id/envio"
         />
-
 </LinearLayout>
+</ScrollView>
